		on users.  (eg, templates, themes, max matchs, etc)
	- Created generic preferneces/preferences.php app, which uses hooks to
		set user preferences, admins can force preference, or set the defaults
		for new accounts.
	- Added global config option to deny users to access grants, usefull for ISPs
	- Merged patch for NIS auth - Thanks Dylan Adams <l0n@users.sourceforge.net>

[0.9.12]
	- Note: These changelogs will only contain changes in the API (preferences, admin, etc)
	- Created a config option to force users to use a certian theme.
	- Fixed nextmatchs on the categories preferences screen
	- Added new config class so developers can centralize there configs
	- Created new logos for the verdilak layout.
	- You can now add enable_*_ class in $phpgw_info['flags'] to load any class in the API
	- Removed phpgw_info array caching, it was broken and only slowed things down

[0.9.10]
	- Fixed the cron programs, they where out of date in the table structures
	- Added the ["flags"]["nofooter"] . ["flags"]["noappfooter"] flags.
	- Fixed calendars in Printer Friendly mode.
	- Fixed calendar day-view with events spanning multiple hours.
	- Fixed calendar default view.
	- Fixed calendar when editing events and groups associated to them.
	- Fixed lang independence with navbar text.
	- Implemented new Applications class.
	- Changed all API table names to use the phpgw_ prefix.
	- Application permissions on accounts is now done via full ACL
	- You can now turn off cacheing of the phpgw_info array, maybe a small preformance increase
		depending on the setup.
	- phpgw_info is now cached in phpgw_app_sessions instead of phpgw_sessions.session_info
	- The over all structure of the API has changed quite a bit.
	- Files in phpgwapi/inc now have a class. prefix instead of phpgw_
	- Classes are now loaded via createobject()
	- The categories class has been updated and is working better
	- The new contacts class, which will be a central point for all contact data is now in place