@@ -29,33 +29,28 @@
     <TR bgcolor="#e6e6e6">
      <TD valign="BASELINES">
 
-      <FORM method="post" action="{login_url}">
-       <TABLE border="0" align="CENTER" bgcolor="#486591" width="100%" cellpadding="0" cellspacing="0">
-        <TR bgcolor="#e6e6e6">
-         <TD colspan="2" align="CENTER">
-          {cd}
-         </TD>
-        </TR>
-        <TR bgcolor="#e6e6e6">
-         <TD align="RIGHT"><font color="#000000">{lang_username}:&nbsp;</font></TD>
-         <TD><input name="login" value="{cookie}"></TD>
-        </TR>
-        <TR bgcolor="#e6e6e6">
-         <TD align="RIGHT"><font color="#000000">{lang_password}:&nbsp;</font></TD>
-         <TD><input name="passwd" type="password"></TD>
-        </TR>
-        <TR bgcolor="#e6e6e6">
-         <TD colspan="2" align="CENTER">
-          <input type="submit" value="{lang_login}" name="submit">
-         </TD>
-        </TR>
-        <TR bgcolor="#e6e6e6">
-         <TD colspan="2" align="RIGHT">
-          <font color="#000000" size="-1">{version}</font>
-         </TD>
-        </TR>       
-       </TABLE>
-      </FORM>
+		<FORM method="post" action="{login_url}">
+		<input type="hidden" name="passwd_type" value="text">
+			<TABLE border="0" align="CENTER" bgcolor="#486591" width="100%" cellpadding="0" cellspacing="0">
+				<TR bgcolor="#e6e6e6">
+					<TD colspan="2" align="CENTER">{cd}</TD>
+				</TR>
+				<TR bgcolor="#e6e6e6">
+					<TD align="RIGHT"><font color="#000000">{lang_username}:&nbsp;</font></TD>
+					<TD><input name="login" value="{cookie}"></TD>
+				</TR>
+				<TR bgcolor="#e6e6e6">
+					<TD align="RIGHT"><font color="#000000">{lang_password}:&nbsp;</font></TD>
+					<TD><input name="passwd" type="password"></TD>
+				</TR>
+				<TR bgcolor="#e6e6e6">
+					<TD colspan="2" align="CENTER"><input type="submit" value="{lang_login}" name="submit"></TD>
+				</TR>
+				<TR bgcolor="#e6e6e6">
+					<TD colspan="2" align="RIGHT"><font color="#000000" size="-1">{version}</font></TD>
+				</TR>       
+			</TABLE>
+		</FORM>
      
      </TD>
     </TR>
